<resources>
    <string name="app_name">Simple weather app</string>
    <string name="please_enter_city_name">Please enter city name</string>
    <string name="add_new_city">add new city</string>
    <string name="error">Error</string>
    <string name="dismiss">dismiss</string>
    <string name="success">Success</string>
    <string name="city_added_successfully">City added successfully</string>
    <string name="cancel">Cancel</string>
    <string name="weather_information_for">weather information for london received on 01-08-2020</string>
    <string name="description">Description : </string>
    <string name="temp">Temp : </string>
    <string name="humidity">humidity : </string>
    <string name="windspeed">Windspeed :</string>
    <string name="cities">Cities</string>
    <string name="historical">Historical</string>
    <string name="done">Done</string>
</resources>